--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "ipykernel>=7.1.0",
     "jupyter>=1.1.1",
     "matplotlib>=3.10.8",
+    "mplfinance>=0.12.10b0",
     "numpy>=2.2.6",
     "pandas>=2.3.3",
 ]
