--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,12 +5,16 @@ description = "Trading analysis tools for indicators like GEX, trade analysis, a
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
+    "backtrader>=1.9.78.123",
     "ipykernel>=7.1.0",
     "jupyter>=1.1.1",
     "matplotlib>=3.10.8",
     "mplfinance>=0.12.10b0",
     "numpy>=2.2.6",
     "pandas>=2.3.3",
+    "ta>=0.11.0",
+    "streamlit>=1.50.0",
+    "python-dotenv>=1.0.1"
 ]
 
 [dependency-groups]
